Weird_error_in_ConsensusDF

--- a/3_FeatureGroupingAlgorithmKD.ipynb
+++ b/3_FeatureGroupingAlgorithmKD.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Determination of memory status is not supported on this \n",
+      " platform, measuring for memoryleaks will never fail\n"
+     ]
+    }
+   ],
    "source": [
     "from pyopenms import *\n",
     "import pyopenms as pms\n",
@@ -16,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,26 +120,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['results/consensus/interim/IDMapper_Epemicins.featureXML', 'results/consensus/interim/IDMapper_GermicidinA.featureXML', 'results/consensus/interim/IDMapper_GermicidinB.featureXML']\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "While loading 'results/consensus/interim/IDMapper_GermicidinA.featureXML': input ended before all started tags were ended; last tag started is 'convexhull'( in line 65019 column 23) in: results/consensus/interim/IDMapper_GermicidinA.featureXML",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/c_/ysz9v_bd1yb7h3ymmkn6m199jbv7x7/T/ipykernel_46912/2936098976.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mfeaturexml_file\u001b[0m \u001b[0;32min\u001b[0m \u001b[0minput_feature_files\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mfmap\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFeatureMap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mFeatureXMLFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeaturexml_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfmap\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0mfeature_maps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfmap\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mpyopenms/pyopenms_1.pyx\u001b[0m in \u001b[0;36mpyopenms.pyopenms_1.FeatureXMLFile.load\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: While loading 'results/consensus/interim/IDMapper_GermicidinA.featureXML': input ended before all started tags were ended; last tag started is 'convexhull'( in line 65019 column 23) in: results/consensus/interim/IDMapper_GermicidinA.featureXML"
+      "['results/consensus/interim/IDMapper_20210827_UMETAB219_POS_DNPM_Plate-2_MDNAWGS14_blank.featureXML', 'results/consensus/interim/IDMapper_20210827_UMETAB219_POS_DNPM_Plate-2_MDNAWGS14_rep1.featureXML', 'results/consensus/interim/IDMapper_20210827_UMETAB219_POS_DNPM_Plate-2_MDNAWGS14_rep2.featureXML', 'results/consensus/interim/IDMapper_20210827_UMETAB219_POS_DNPM_Plate-2_MDNAWGS14_rep3.featureXML', 'results/consensus/interim/IDMapper_20210827_UMETAB219_POS_FPY12_Plate-2_MDNAWGS14_blank.featureXML', 'results/consensus/interim/IDMapper_20210827_UMETAB219_POS_FPY12_Plate-2_MDNAWGS14_rep1.featureXML', 'results/consensus/interim/IDMapper_20210827_UMETAB219_POS_FPY12_Plate-2_MDNAWGS14_rep2.featureXML', 'results/consensus/interim/IDMapper_20210827_UMETAB219_POS_FPY12_Plate-2_MDNAWGS14_rep3.featureXML', 'results/consensus/interim/IDMapper_20210827_UMETAB219_POS_ISP2_Plate-2_MDNAWGS14_blank.featureXML', 'results/consensus/interim/IDMapper_20210827_UMETAB219_POS_ISP2_Plate-2_MDNAWGS14_rep1.featureXML', 'results/consensus/interim/IDMapper_20210827_UMETAB219_POS_ISP2_Plate-2_MDNAWGS14_rep2.featureXML', 'results/consensus/interim/IDMapper_20210827_UMETAB219_POS_ISP2_Plate-2_MDNAWGS14_rep3.featureXML']\n",
+      "results/interim/precursorcorrected_20210827_UMETAB219_POS_DNPM_Plate-2_MDNAWGS14_blank.mzML\n",
+      "0\n",
+      "results/interim/precursorcorrected_20210827_UMETAB219_POS_DNPM_Plate-2_MDNAWGS14_rep1.mzML\n",
+      "0\n",
+      "results/interim/precursorcorrected_20210827_UMETAB219_POS_DNPM_Plate-2_MDNAWGS14_rep2.mzML\n",
+      "0\n",
+      "results/interim/precursorcorrected_20210827_UMETAB219_POS_DNPM_Plate-2_MDNAWGS14_rep3.mzML\n",
+      "0\n",
+      "results/interim/precursorcorrected_20210827_UMETAB219_POS_FPY12_Plate-2_MDNAWGS14_blank.mzML\n",
+      "0\n",
+      "results/interim/precursorcorrected_20210827_UMETAB219_POS_FPY12_Plate-2_MDNAWGS14_rep1.mzML\n",
+      "0\n",
+      "results/interim/precursorcorrected_20210827_UMETAB219_POS_FPY12_Plate-2_MDNAWGS14_rep2.mzML\n",
+      "0\n",
+      "results/interim/precursorcorrected_20210827_UMETAB219_POS_FPY12_Plate-2_MDNAWGS14_rep3.mzML\n",
+      "0\n",
+      "results/interim/precursorcorrected_20210827_UMETAB219_POS_ISP2_Plate-2_MDNAWGS14_blank.mzML\n",
+      "0\n",
+      "results/interim/precursorcorrected_20210827_UMETAB219_POS_ISP2_Plate-2_MDNAWGS14_rep1.mzML\n",
+      "0\n",
+      "results/interim/precursorcorrected_20210827_UMETAB219_POS_ISP2_Plate-2_MDNAWGS14_rep2.mzML\n",
+      "0\n",
+      "results/interim/precursorcorrected_20210827_UMETAB219_POS_ISP2_Plate-2_MDNAWGS14_rep3.mzML\n",
+      "0\n",
+      "Progress of 'computing RT transformations':\n",
+      "-- done [took 0.12 s (CPU), 0.11 s (Wall)] -- \n",
+      "Progress of 'linking features':\n",
+      "-- done [took 0.25 s (CPU), 0.25 s (Wall)] -- \n",
+      "ConsensusXMLFile::store():  found 8873 invalid unique ids\n"
      ]
     }
    ],
