--- a/6_TextExporter.ipynb
+++ b/6_TextExporter.ipynb
@@ -226,7 +226,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyopenms import *\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#From consensusXML (filtered) to FeatureQuantificationTable.txt\n"
+   ]
   }
  ],
  "metadata": {
