--- a/3_FeatureGroupingAlgorithmKD.ipynb
+++ b/3_FeatureGroupingAlgorithmKD.ipynb
@@ -198,7 +198,7 @@
     "intensities = consensus_map.get_intensity_df()\n",
     "\n",
     "# get meta data as DataFrame\n",
-    "meta_data = consensus_map.get_metadata_df()[['RT', 'mz', 'quality']]\n",
+    "meta_data = consensus_map.get_metadata_df()[['RT', 'mz', 'charge']]\n",
     "\n",
     "# you can concatenate these two for a \"result\" DataFrame\n",
     "result = pd.concat([meta_data, intensities], axis=1)\n",
@@ -209,13 +209,6 @@
     "# store as tsv file\n",
     "result.to_csv('results/consensus/Consensus.tsv', sep = '\\t', index = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
