--- a/FFMI.ipynb
+++ b/FFMI.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Determination of memory status is not supported on this \n",
-      " platform, measuring for memoryleaks will never fail\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyopenms import *\n",
     "import pandas as pd\n",
@@ -50,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,166 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5079 spectra and 1 chromatograms stored.\n",
-      "5234 spectra and 1 chromatograms stored.\n",
-      "5089 spectra and 1 chromatograms stored.\n",
-      "5204 spectra and 1 chromatograms stored.\n",
-      "5018 spectra and 1 chromatograms stored.\n",
-      "4921 spectra and 1 chromatograms stored.\n",
-      "5236 spectra and 1 chromatograms stored.\n",
-      "5104 spectra and 1 chromatograms stored.\n",
-      "5095 spectra and 1 chromatograms stored.\n",
-      "4847 spectra and 1 chromatograms stored.\n",
-      "5105 spectra and 1 chromatograms stored.\n",
-      "5212 spectra and 1 chromatograms stored.\n",
-      "RT window size calculated as 240 seconds.\n",
-      "RT window size calculated as 80 seconds.\n",
-      "Extracting chromatograms...\n",
-      "Detecting chromatographic peaks...\n",
-      "Found 17 feature candidates in total.\n",
-      "7 features left after selection of best candidates.\n",
-      "4 features left after resolving overlaps (involving 4 features in 1 groups).\n",
-      "RT window size calculated as 240 seconds.\n",
-      "RT window size calculated as 80 seconds."
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Found no signal. The Gaussian width is probably smaller than the spacing in your chromatogram data. Try to use a bigger width. The error occurred in the chromatogram with m/z time 1423.830750294896006.\n",
-      "Found no signal. The Gaussian width is probably smaller than the spacing in your chromatogram data. Try to use a bigger width. The error occurred in the chromatogram with m/z time 712.418518849583506.\n",
-      "Found no signal. The Gaussian width is probably smaller than the spacing in your chromatogram data. Try to use a bigger width. The error occurred in the chromatogram with m/z time 712.418579884739756.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Extracting chromatograms...\n",
-      "Detecting chromatographic peaks...\n",
-      "Found 4 feature candidates in total.\n",
-      "4 features left after selection of best candidates.\n",
-      "1 features left after resolving overlaps (involving 4 features in 1 groups).\n",
-      "RT window size calculated as 240 seconds.\n",
-      "RT window size calculated as 80 seconds.\n",
-      "Extracting chromatograms...\n",
-      "Detecting chromatographic peaks...\n",
-      "Found 11 feature candidates in total.\n",
-      "7 features left after selection of best candidates.\n",
-      "3 features left after resolving overlaps (involving 6 features in 2 groups).\n",
-      "RT window size calculated as 240 seconds.\n",
-      "RT window size calculated as 80 seconds.\n",
-      "Extracting chromatograms...\n",
-      "Detecting chromatographic peaks...\n",
-      "Found 12 feature candidates in total.\n",
-      "7 features left after selection of best candidates.\n",
-      "3 features left after resolving overlaps (involving 6 features in 1 groups).\n",
-      "RT window size calculated as 240 seconds.\n",
-      "RT window size calculated as 80 seconds.\n",
-      "Extracting chromatograms...\n",
-      "Detecting chromatographic peaks...\n",
-      "Found 12 feature candidates in total.\n",
-      "7 features left after selection of best candidates.\n",
-      "3 features left after resolving overlaps (involving 6 features in 2 groups).\n",
-      "RT window size calculated as 240 seconds.\n",
-      "RT window size calculated as 80 seconds.\n",
-      "Extracting chromatograms...\n",
-      "Detecting chromatographic peaks...\n",
-      "Found 7 feature candidates in total.\n",
-      "7 features left after selection of best candidates.\n",
-      "3 features left after resolving overlaps (involving 6 features in 1 groups).\n",
-      "RT window size calculated as 240 seconds.\n",
-      "RT window size calculated as 80 seconds.\n",
-      "Extracting chromatograms...\n",
-      "Detecting chromatographic peaks...\n",
-      "Found 11 feature candidates in total.\n",
-      "7 features left after selection of best candidates.\n",
-      "3 features left after resolving overlaps (involving 6 features in 2 groups).\n",
-      "RT window size calculated as 240 seconds.\n",
-      "RT window size calculated as 80 seconds.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Found no signal. The Gaussian width is probably smaller than the spacing in your chromatogram data. Try to use a bigger width. The error occurred in the chromatogram with m/z time 712.418762990208506.\n",
-      "Found no signal. The Gaussian width is probably smaller than the spacing in your chromatogram data. Try to use a bigger width. The error occurred in the chromatogram with m/z time 712.418824025364756.\n",
-      "Found no signal. The Gaussian width is probably smaller than the spacing in your chromatogram data. Try to use a bigger width. The error occurred in the chromatogram with m/z time 1423.830750294896006.\n",
-      "Found no signal. The Gaussian width is probably smaller than the spacing in your chromatogram data. Try to use a bigger width. The error occurred in the chromatogram with m/z time 712.418457814427256.\n",
-      "<Found no signal. The Gaussian width is probably smaller than the spacing in your chromatogram data. Try to use a bigger width. The error occurred in the chromatogram with m/z time 712.418824025364756.> occurred 2 times\n",
-      "Found no signal. The Gaussian width is probably smaller than the spacing in your chromatogram data. Try to use a bigger width. The error occurred in the chromatogram with m/z time 712.418518849583506.\n",
-      "Found no signal. The Gaussian width is probably smaller than the spacing in your chromatogram data. Try to use a bigger width. The error occurred in the chromatogram with m/z time 712.418579884739756.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting chromatograms...\n",
-      "Detecting chromatographic peaks...\n",
-      "Found 0 feature candidates in total.\n",
-      "0 features left after selection of best candidates.\n",
-      "No overlaps between features found.\n",
-      "RT window size calculated as 240 seconds.\n",
-      "RT window size calculated as 80 seconds.\n",
-      "Extracting chromatograms...\n",
-      "Detecting chromatographic peaks...\n",
-      "Found 11 feature candidates in total.\n",
-      "7 features left after selection of best candidates.\n",
-      "3 features left after resolving overlaps (involving 6 features in 1 groups).\n",
-      "RT window size calculated as 240 seconds.\n",
-      "RT window size calculated as 80 seconds.\n",
-      "Extracting chromatograms...\n",
-      "Detecting chromatographic peaks...\n",
-      "Found 17 feature candidates in total.\n",
-      "7 features left after selection of best candidates.\n",
-      "3 features left after resolving overlaps (involving 5 features in 1 groups).\n",
-      "RT window size calculated as 240 seconds.\n",
-      "RT window size calculated as 80 seconds.\n",
-      "Extracting chromatograms...\n",
-      "Detecting chromatographic peaks...\n",
-      "Found 17 feature candidates in total.\n",
-      "7 features left after selection of best candidates.\n",
-      "3 features left after resolving overlaps (involving 6 features in 2 groups).\n",
-      "RT window size calculated as 240 seconds.\n",
-      "RT window size calculated as 80 seconds.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Found no signal. The Gaussian width is probably smaller than the spacing in your chromatogram data. Try to use a bigger width. The error occurred in the chromatogram with m/z time 712.418762990208506.\n",
-      "Found no signal. The Gaussian width is probably smaller than the spacing in your chromatogram data. Try to use a bigger width. The error occurred in the chromatogram with m/z time 712.418824025364756.\n",
-      "Found no signal. The Gaussian width is probably smaller than the spacing in your chromatogram data. Try to use a bigger width. The error occurred in the chromatogram with m/z time 1423.830750294896006.\n",
-      "Found no signal. The Gaussian width is probably smaller than the spacing in your chromatogram data. Try to use a bigger width. The error occurred in the chromatogram with m/z time 712.418457814427256.\n",
-      "<Found no signal. The Gaussian width is probably smaller than the spacing in your chromatogram data. Try to use a bigger width. The error occurred in the chromatogram with m/z time 712.418824025364756.> occurred 2 times\n",
-      "Found no signal. The Gaussian width is probably smaller than the spacing in your chromatogram data. Try to use a bigger width. The error occurred in the chromatogram with m/z time 712.418518849583506.\n",
-      "Found no signal. The Gaussian width is probably smaller than the spacing in your chromatogram data. Try to use a bigger width. The error occurred in the chromatogram with m/z time 712.418579884739756.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting chromatograms...\n",
-      "Detecting chromatographic peaks...\n",
-      "Found 0 feature candidates in total.\n",
-      "0 features left after selection of best candidates.\n",
-      "No overlaps between features found.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_mzml_files=glob.glob(\"results/FFMI/interim/*.mzML\")\n",
     "# load ms data from mzML file into MSExperiment\n",
@@ -265,8 +99,7 @@
     "    params = ff.getParameters()\n",
     "    #params[b'debug']= 3\n",
     "    params[b'extract:mz_window'] = 5.0 \n",
-    "    params[b'model:type']= b'none'\n",
-    "    #params[b'extract:rt_window'] = 50.0\n",
+    "    #params[b'model:type']= b'none'\n",
     "    params[b'detect:peak_width'] = 20.0  #adjust for wide peaks\n",
     "    ff.setParameters(params)\n",
     "\n",
