--- a/OpenMS_workflow.ipynb
+++ b/OpenMS_workflow.ipynb
@@ -5634,7 +5634,7 @@
    "hash": "edde62aa2661007f0756e9790e7a328c288a583bf6ce768a355147dac67c8db8"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
