--- a/OpenMS_workflow.ipynb
+++ b/OpenMS_workflow.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6329ae31",
    "metadata": {},
    "outputs": [
@@ -73,13 +73,73 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>20200108_NBC__UMETAB108_Globomycin_NEG_14</td>\n",
+       "      <td>20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_1...</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>20200108_NBC__UMETAB108_Globomycin_POS_07</td>\n",
+       "      <td>20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_1...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_1...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_1...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20210827_UMETAB219_POS_FPY12_Plate-2_MDNA_WGS_...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>20210827_UMETAB219_POS_FPY12_Plate-2_MDNA_WGS_...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>20210827_UMETAB219_POS_FPY12_Plate-2_MDNA_WGS_...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>20210827_UMETAB219_POS_FPY12_Plate-2_MDNA_WGS_...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>20210827_UMETAB219_POS_ISP2_Plate-2_MDNA_WGS_1...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>20210827_UMETAB219_POS_ISP2_Plate-2_MDNA_WGS_1...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>20210827_UMETAB219_POS_ISP2_Plate-2_MDNA_WGS_1...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>20210827_UMETAB219_POS_ISP2_Plate-2_MDNA_WGS_1...</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "    </tr>\n",
@@ -88,12 +148,22 @@
        "</div>"
       ],
       "text/plain": [
-       "                                 sample_name comment MAPnumber\n",
-       "0  20200108_NBC__UMETAB108_Globomycin_NEG_14                  \n",
-       "1  20200108_NBC__UMETAB108_Globomycin_POS_07                  "
+       "                                          sample_name comment MAPnumber\n",
+       "0   20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_1...                  \n",
+       "1   20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_1...                  \n",
+       "2   20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_1...                  \n",
+       "3   20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_1...                  \n",
+       "4   20210827_UMETAB219_POS_FPY12_Plate-2_MDNA_WGS_...                  \n",
+       "5   20210827_UMETAB219_POS_FPY12_Plate-2_MDNA_WGS_...                  \n",
+       "6   20210827_UMETAB219_POS_FPY12_Plate-2_MDNA_WGS_...                  \n",
+       "7   20210827_UMETAB219_POS_FPY12_Plate-2_MDNA_WGS_...                  \n",
+       "8   20210827_UMETAB219_POS_ISP2_Plate-2_MDNA_WGS_1...                  \n",
+       "9   20210827_UMETAB219_POS_ISP2_Plate-2_MDNA_WGS_1...                  \n",
+       "10  20210827_UMETAB219_POS_ISP2_Plate-2_MDNA_WGS_1...                  \n",
+       "11  20210827_UMETAB219_POS_ISP2_Plate-2_MDNA_WGS_1...                  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4859,7 +4929,7 @@
     "            protein_ids = []\n",
     "            \n",
     "            mapper.annotate(fmap, peptide_ids, protein_ids, use_centroid_rt, use_centroid_mz, exp)\n",
-    "            print(fmap.getMetaValue('spectra_data')[0].decode())\n",
+    "            #print(fmap.getMetaValue('spectra_data')[0].decode())\n",
     "        featureidx_file = os.path.join(\"results\", \"\", \"consensus\", \"\", \"interim\", \"\", 'IDMapper_' + os.path.basename(fmap.getMetaValue('spectra_data')[0].decode())[19:-5] +\".featureXML\")\n",
     "        FeatureXMLFile().store(featureidx_file, fmap)"
    ]
@@ -5083,18 +5153,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e770c04a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ConsensusXMLFile::store():  found 3544 invalid unique ids\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_consensus= \"results/consensus/interim/consensus.consensusXML\"\n",
     "cmap = ConsensusMap()\n",
