--- a/OpenMS_workflow.ipynb
+++ b/OpenMS_workflow.ipynb
@@ -4484,11 +4484,15 @@
     "                if len(hits) != 0:\n",
     "                    besthit = hits[0]  # type: PeptideHit\n",
     "                    # TODO what else\n",
-    "                    yield f.getUniqueId(), f.getCharge(), f.getRT(), f.getMZ(), f.getQuality()\n",
+    "                    yield f.getUniqueId(), besthit.getSequence().toString(), f.getCharge(), f.getRT(), f.getMZ(), f.getQuality()\n",
+    "                else:\n",
+    "                    yield f.getUniqueId(), None, f.getCharge(), f.getRT(), f.getMZ(), f.getQuality()\n",
+    "            else:\n",
+    "                yield f.getUniqueId(), None, f.getCharge(), f.getRT(), f.getMZ(), f.getQuality()\n",
     "\n",
     "        cnt = self.size()\n",
     "\n",
-    "        mddtypes = [('id', np.dtype('uint64')), ('charge', 'i4'), ('RT', 'f'), ('mz', 'f'),\n",
+    "        mddtypes = [('id', np.dtype('uint64')), ('sequence', 'U200'), ('charge', 'i4'), ('RT', 'f'), ('mz', 'f'),\n",
     "                    ('quality', 'f')]\n",
     "        mdarr = np.fromiter(iter=gen(self, extractMetaData), dtype=mddtypes, count=cnt)\n",
     "        return pd.DataFrame(mdarr).set_index('id')"
